+ Added: _ulid value to events.yml
+ Added: [Suggestion] You can now disable the Redis log messages in the config: "database.redis.log"
+ Changed: [Suggestion] Prompt to delete whole land, if /lands delete here is executed in the default area.