@@ -1,3 +1,12 @@
-+ Added: _ulid value to events.yml
-+ Added: [Suggestion] You can now disable the Redis log messages in the config: "database.redis.log"
-+ Changed: [Suggestion] Prompt to delete whole land, if /lands delete here is executed in the default area.
++ Added: Option to define flight control state in non-claim worlds
+    # This option only affects worlds that aren't in claim-worlds_list.
+    # For worlds of claim-worlds_list this option is irrelevant, since flight is controlled via the FLY flag.
+    # To toggle flight control in wilderness of claim worlds, just execute /lands admin menu while standing in the world.
+    # This list allows you to deny or allow flight in worlds that aren't in claim-worlds_list. This is important if players are switching worlds.
+    # You can use wildcard (*) to add all worlds to this list.
+    # Entry format is as follows: worldName:allowFly
+    # Example:
+    #   world:false -> if world isn't part of claim-worlds_list, flight will be disabled in this world.
+    #   world:true -> if world isn't part of claim-worlds_list, flight won't be disabled when players enter this world.
+    #   If world is part of claim-worlds_list, the flight control will be controlled via the FLY flag in /lands admin menu or the menu of claims.
+    fly-worlds_list: []
